Added JS framework banners to the different projects.

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,3 +1,21 @@
+<div style="
+    height: 25px;
+    width: 200px;
+    background-color: red;
+    color: white;
+    position: absolute;
+    top: 20px;
+    right: -70px;
+    transform: rotate(45deg);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 12pt;
+    font-weight: bold;
+  ">
+  Angular
+</div>
 <ion-app>
   <app-split-pane></app-split-pane>>
 </ion-app>
