--- a/angular/src/app/tab1/tab1.page.html
+++ b/angular/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar color="primary">
     <ion-title>
-      ngTab 1
+      Tab 1
     </ion-title>
     <ion-buttons slot="start">
       <ion-menu-button>
